--- a/src/styles.css
+++ b/src/styles.css
@@ -7,4 +7,5 @@ html,
 body {
   height: 100%;
   margin: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
