--- a/src/styles.css
+++ b/src/styles.css
@@ -3,9 +3,31 @@
   box-sizing: border-box;
 }
 
-html,
+:root {
+  --bg-1: #fff;
+  --bg-2: #bbdefb;
+  --bg-3: #777;
+  --fg: #212121;
+  --card-border: #1976d2;
+  --card-border-found: #bdbdbd;
+  --accent: #448aff;
+}
+
+:root,
 body {
   height: 100%;
   margin: 0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background: var(--bg-1);
+  color: var(--fg);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --bg-1: #212121;
+    --bg-2: #757575;
+    --bg-3: #bdbdbd;
+    --fg: #ffffff;
+    --accent: #448aff;
+  }
 }
